Fix Corona, MainNews, Newswrap, SubNews, Weather scss

--- a/src/components/News/Corona.scss
+++ b/src/components/News/Corona.scss
@@ -1,7 +1,7 @@
 .corona-article {
   display: flex;
   flex-direction: column;
-  padding: 15px;
+  padding: 10px;
   width: 100%;
   > p {
     margin: 0;
