--- a/src/components/News/MainNews.scss
+++ b/src/components/News/MainNews.scss
@@ -1,5 +1,5 @@
 .news-article {
-  padding: 15px;
+  padding: 10px;
   overflow-y: scroll;
   &::-webkit-scrollbar {
     width: 8px;
