--- a/src/components/News/Newswrap.scss
+++ b/src/components/News/Newswrap.scss
@@ -3,7 +3,7 @@
   background-color: white;
   height: 100vh;
   .news-section {
-    margin: 60px auto;
+    margin: 80px auto;
     width: 85%;
     display: flex;
   }
