--- a/src/components/News/SubNews.scss
+++ b/src/components/News/SubNews.scss
@@ -13,7 +13,6 @@
     }
     &:last-child {
       flex: 1;
-      background-color: lightyellow;
     }
   }
 }
